# Sentinel

./: .gitignore  LICENSE  README.md  pyproject.toml
docs/: capture_studio_gif.py  capture_studio_screenshots.py
src/sentinel/: __init__.py  a11y.py  agent.py  api_client.py  api_planner.py  api_runner.py  api_schemas.py  browser.py  cli.py  config.py  cost.py  error_format.py  exceptions.py  llm.py  llm_claude_code.py  llm_google.py  llm_ollama.py  llm_openai.py  planner.py  runner.py  schemas.py  user_config.py  visual.py
src/sentinel/server/: __init__.py  app.py  auth.py  bootstrap.py  db.py  models.py  paths.py  runner.py  schemas.py
src/sentinel/server/api/: __init__.py  auth.py  projects.py  runs.py  users.py
src/sentinel/server/static/: index.html
src/sentinel/server/static/assets/: index-CtEXrwWF.css  index-DelMEYUN.js
tests/: conftest.py  test_a11y.py  test_api_client.py  test_api_planner.py  test_api_runner.py  test_api_schemas.py  test_browser.py  test_cli.py  test_config.py  test_planner.py  test_runner.py  test_schemas.py  test_self_healing.py  test_server_api.py  test_studio_e2e.py  test_visual.py
web/: index.html  package-lock.json  package.json  tsconfig.tsbuildinfo  vite.config.ts
web/src/: App.tsx  main.tsx  styles.css
web/src/api/: client.ts  types.ts
web/src/components/: Layout.tsx  ProtectedRoute.tsx  runs.tsx
web/src/hooks/: useAuth.tsx
web/src/pages/: AdminUsersPage.tsx  LoginPage.tsx  ProjectDetailPage.tsx  ProjectsPage.tsx  RunDetailPage.tsx  RunsPage.tsx
