[project]
name = "sentinel-agent"
version = "0.1.0a3"
description = "AI-driven functional testing agent. Point it at a URL; it explores the app, generates a test plan, runs it, and reports findings. Web + visual regression + accessibility in v0.1; API + mobile in later versions."
readme = "README.md"
license = { file = "LICENSE" }
requires-python = ">=3.11"
authors = [
    { name = "ThinkNext Software Solutions", email = "hello@thinknextsoftware.com" }
]
keywords = [
    "ai", "agent", "ai-agent", "agentic-ai", "llm",
    "testing", "test-automation", "e2e", "playwright",
    "visual-regression", "accessibility", "a11y", "axe-core",
    "web-testing", "ui-testing", "qa",
    "self-hosted", "open-source",
    "anthropic", "openai", "claude", "gemini",
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development",
    "Topic :: Software Development :: Testing",
    "Topic :: Software Development :: Quality Assurance",
    "Environment :: Console",
]

# Sentinel depends on cascade-agent for LLM client abstractions and
# error types so the three ThinkNext products share one LLM layer.
# Playwright drives the browser. Pillow handles screenshot diffing.
dependencies = [
    "cascade-agent>=0.1.0a1",
    "click>=8.1.0",
    "pydantic>=2.0",
    "PyYAML>=6.0",
    "playwright>=1.40",
    "pillow>=10.0",
    "httpx>=0.27",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
    "pytest-asyncio>=0.23",
    "black>=24.0",
    "ruff>=0.5",
    "mypy>=1.10",
    "build>=1.0",
    "twine>=5.0",
]

[project.scripts]
sentinel = "sentinel.cli:main"

[project.urls]
Homepage = "https://thinknextsoftware.com"
Documentation = "https://github.com/Thinknext-Software-Solutions/Sentinel"
Repository = "https://github.com/Thinknext-Software-Solutions/Sentinel"
Issues = "https://github.com/Thinknext-Software-Solutions/Sentinel/issues"
Changelog = "https://github.com/Thinknext-Software-Solutions/Sentinel/releases"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/sentinel"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "W", "UP", "RUF"]

[tool.black]
line-length = 100
target-version = ["py311"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
addopts = "-v --tb=short"
asyncio_mode = "auto"
