[project]
name = "sentinel-agent"
version = "0.1.8"
description = "AI-driven functional testing agent. Point it at a URL; it explores the app, generates a test plan, runs it, and reports findings. Web (Playwright) + visual regression + accessibility (axe-core) + REST API contract tests, all driven by your choice of LLM."
readme = "README.md"
license = { file = "LICENSE" }
requires-python = ">=3.11"
authors = [
    { name = "ThinkNext Software Solutions", email = "hello@thinknextsoftware.com" }
]
keywords = [
    "ai", "agent", "ai-agent", "agentic-ai", "llm",
    "testing", "test-automation", "e2e", "playwright",
    "visual-regression", "accessibility", "a11y", "axe-core",
    "web-testing", "ui-testing", "qa",
    "self-hosted", "open-source",
    "anthropic", "openai", "claude", "gemini",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development",
    "Topic :: Software Development :: Testing",
    "Topic :: Software Development :: Quality Assurance",
    "Environment :: Console",
]

# Sentinel is standalone: it carries its own LLM client layer so it
# does not depend on any other ThinkNext package at runtime.
# Playwright drives the browser. Pillow handles screenshot diffing.
# httpx powers the API testing module.
dependencies = [
    "click>=8.1.0",
    "pydantic>=2.0",
    "PyYAML>=6.0",
    "playwright>=1.40",
    "pillow>=10.0",
    "httpx>=0.27",
]

[project.optional-dependencies]
# LLM provider extras. Install the one(s) you need:
#   pip install 'sentinel-agent[anthropic]'
#   pip install 'sentinel-agent[claude-code]'
#   pip install 'sentinel-agent[openai,google]'
anthropic = ["anthropic>=0.30"]
openai = ["openai>=1.30"]
google = ["google-generativeai>=0.7"]
claude-code = ["claude-agent-sdk>=0.1"]
all = [
    "anthropic>=0.30",
    "openai>=1.30",
    "google-generativeai>=0.7",
    "claude-agent-sdk>=0.1",
]
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
    "pytest-asyncio>=0.23",
    "black>=24.0",
    "ruff>=0.5",
    "mypy>=1.10",
    "build>=1.0",
    "twine>=5.0",
]

[project.scripts]
sentinel = "sentinel.cli:main"

[project.urls]
Homepage = "https://thinknextsoftware.com"
Documentation = "https://github.com/Thinknext-Software-Solutions/Sentinel"
Repository = "https://github.com/Thinknext-Software-Solutions/Sentinel"
Issues = "https://github.com/Thinknext-Software-Solutions/Sentinel/issues"
Changelog = "https://github.com/Thinknext-Software-Solutions/Sentinel/releases"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/sentinel"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "W", "UP", "RUF"]

[tool.black]
line-length = 100
target-version = ["py311"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
addopts = "-v --tb=short"
asyncio_mode = "auto"
